fixed menu on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7352,7 +7352,7 @@ input, select, textarea {
 		@media screen and (max-width: 480px) {
 
 			#header nav a[href="#menu"] {
-				width: 4em;
+				width: 11em;
 				white-space: nowrap;
 				text-indent: 4em;
 				position: relative;
